objects/Chatter_Message_Recipient__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Message__c</fullName>
        <label>Chatter Message</label>
        <referenceTo>Chatter_Message__c</referenceTo>
        <relationshipLabel>Chatter Message Recipients</relationshipLabel>
        <relationshipName>Chatter_Message_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Message_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unread__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Unread</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Message Recipient</label>
    <nameField>
        <displayFormat>CMR-{0000}</displayFormat>
        <label>Chatter Message Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Message Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>